fixed layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,8 @@ footer p {
 }
 
 .footer-content {
-
+  width: 55%;
+  margin: 50px 0;
 }
 
 footer .contact {
@@ -245,12 +246,14 @@ footer .social {
 }
 
 footer .social-icons {
-
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 footer .social-icons ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   padding: 0;
 }
@@ -262,7 +265,7 @@ footer .social-icons ul li {
 }
 
 footer .copyright {
-
+  margin: 20px 0;
 }
 
 /* --------------------- Mobile Styles - Homepage -----------------*/
@@ -302,6 +305,7 @@ aside {
 
 .features article {
   width: 55%;
+  margin: 30px 0;
 }
 
 .features .content-wrapper {
@@ -585,10 +589,20 @@ aside {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-flow: column;
+    width: 100%;
+  }
+  
+  .contact-social {
+    display: flex;
+    width: 100%;
   }
 
   footer .contact,
   footer .social {
+    display: flex;
+    flex-flow: column;
+    text-align: center;
     width: 50%;
   }
 
@@ -734,8 +748,9 @@ aside {
 
   /* Footer */
 
-  footer .content-wrapper {
-    flex-basis: 480px;
+  footer .contact,
+  footer .social{
+    flex-basis: 50%;
   }
 
 
